--- a/WDM.ipynb
+++ b/WDM.ipynb
@@ -38,12 +38,12 @@
    "outputs": [],
    "source": [
     "# Removing Unnecessary Column From The DataSet.  \n",
-    "df=df.drop(['region', 'region_url', 'VIN','url','image_url','description','county'], axis=1)"
+    "df=df.drop(['id','region', 'region_url', 'VIN','url','image_url','description','county'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,16 +53,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(79016, 19)"
+       "(79016, 18)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -83,30 +83,29 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 79016 entries, 31 to 426836\n",
-      "Data columns (total 19 columns):\n",
+      "Data columns (total 18 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   id            79016 non-null  int64  \n",
-      " 1   price         79016 non-null  int64  \n",
-      " 2   year          79016 non-null  float64\n",
-      " 3   manufacturer  79016 non-null  object \n",
-      " 4   model         79016 non-null  object \n",
-      " 5   condition     79016 non-null  object \n",
-      " 6   cylinders     79016 non-null  object \n",
-      " 7   fuel          79016 non-null  object \n",
-      " 8   odometer      79016 non-null  float64\n",
-      " 9   title_status  79016 non-null  object \n",
-      " 10  transmission  79016 non-null  object \n",
-      " 11  drive         79016 non-null  object \n",
-      " 12  size          79016 non-null  object \n",
-      " 13  type          79016 non-null  object \n",
-      " 14  paint_color   79016 non-null  object \n",
-      " 15  state         79016 non-null  object \n",
-      " 16  lat           79016 non-null  float64\n",
-      " 17  long          79016 non-null  float64\n",
-      " 18  posting_date  79016 non-null  object \n",
-      "dtypes: float64(4), int64(2), object(13)\n",
-      "memory usage: 12.1+ MB\n"
+      " 0   price         79016 non-null  int64  \n",
+      " 1   year          79016 non-null  float64\n",
+      " 2   manufacturer  79016 non-null  object \n",
+      " 3   model         79016 non-null  object \n",
+      " 4   condition     79016 non-null  object \n",
+      " 5   cylinders     79016 non-null  object \n",
+      " 6   fuel          79016 non-null  object \n",
+      " 7   odometer      79016 non-null  float64\n",
+      " 8   title_status  79016 non-null  object \n",
+      " 9   transmission  79016 non-null  object \n",
+      " 10  drive         79016 non-null  object \n",
+      " 11  size          79016 non-null  object \n",
+      " 12  type          79016 non-null  object \n",
+      " 13  paint_color   79016 non-null  object \n",
+      " 14  state         79016 non-null  object \n",
+      " 15  lat           79016 non-null  float64\n",
+      " 16  long          79016 non-null  float64\n",
+      " 17  posting_date  79016 non-null  object \n",
+      "dtypes: float64(4), int64(1), object(13)\n",
+      "memory usage: 11.5+ MB\n"
      ]
     }
    ],
@@ -117,20 +116,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>year</th>\n",
+       "      <th>odometer</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7.901600e+04</td>\n",
+       "      <td>79016.000000</td>\n",
+       "      <td>7.901600e+04</td>\n",
+       "      <td>79016.000000</td>\n",
+       "      <td>79016.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7.958972e+04</td>\n",
+       "      <td>2008.474575</td>\n",
+       "      <td>1.244541e+05</td>\n",
+       "      <td>38.434362</td>\n",
+       "      <td>-92.646525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.389146e+07</td>\n",
+       "      <td>9.995538</td>\n",
+       "      <td>2.431615e+05</td>\n",
+       "      <td>5.653717</td>\n",
+       "      <td>17.602460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1900.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>-81.838232</td>\n",
+       "      <td>-159.719900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.950000e+03</td>\n",
+       "      <td>2006.000000</td>\n",
+       "      <td>7.300000e+04</td>\n",
+       "      <td>34.945300</td>\n",
+       "      <td>-104.899400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>9.000000e+03</td>\n",
+       "      <td>2011.000000</td>\n",
+       "      <td>1.140000e+05</td>\n",
+       "      <td>39.336100</td>\n",
+       "      <td>-86.658280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1.750000e+04</td>\n",
+       "      <td>2014.000000</td>\n",
+       "      <td>1.554140e+05</td>\n",
+       "      <td>42.278811</td>\n",
+       "      <td>-80.081908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3.736929e+09</td>\n",
+       "      <td>2022.000000</td>\n",
+       "      <td>1.000000e+07</td>\n",
+       "      <td>82.252826</td>\n",
+       "      <td>139.691700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              price          year      odometer           lat          long\n",
+       "count  7.901600e+04  79016.000000  7.901600e+04  79016.000000  79016.000000\n",
+       "mean   7.958972e+04   2008.474575  1.244541e+05     38.434362    -92.646525\n",
+       "std    1.389146e+07      9.995538  2.431615e+05      5.653717     17.602460\n",
+       "min    0.000000e+00   1900.000000  0.000000e+00    -81.838232   -159.719900\n",
+       "25%    4.950000e+03   2006.000000  7.300000e+04     34.945300   -104.899400\n",
+       "50%    9.000000e+03   2011.000000  1.140000e+05     39.336100    -86.658280\n",
+       "75%    1.750000e+04   2014.000000  1.554140e+05     42.278811    -80.081908\n",
+       "max    3.736929e+09   2022.000000  1.000000e+07     82.252826    139.691700"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Showing The Describe of The DataSet\n",
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['id', 'price', 'year', 'manufacturer', 'model', 'condition',\n",
-       "       'cylinders', 'fuel', 'odometer', 'title_status', 'transmission',\n",
-       "       'drive', 'size', 'type', 'paint_color', 'state', 'lat', 'long',\n",
-       "       'posting_date'],\n",
+       "179"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Showing If There Any Duplicated Row\n",
+    "sum(df.duplicated())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['price', 'year', 'manufacturer', 'model', 'condition', 'cylinders',\n",
+       "       'fuel', 'odometer', 'title_status', 'transmission', 'drive', 'size',\n",
+       "       'type', 'paint_color', 'state', 'lat', 'long', 'posting_date'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,13 +319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id              0\n",
        "price           0\n",
        "year            0\n",
        "manufacturer    0\n",
@@ -204,7 +346,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -225,30 +367,29 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 79016 entries, 31 to 426836\n",
-      "Data columns (total 19 columns):\n",
+      "Data columns (total 18 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   id            79016 non-null  int64  \n",
-      " 1   price         79016 non-null  int64  \n",
-      " 2   year          79016 non-null  float64\n",
-      " 3   manufacturer  79016 non-null  int32  \n",
-      " 4   model         79016 non-null  int32  \n",
-      " 5   condition     79016 non-null  int32  \n",
-      " 6   cylinders     79016 non-null  int32  \n",
-      " 7   fuel          79016 non-null  int32  \n",
-      " 8   odometer      79016 non-null  float64\n",
-      " 9   title_status  79016 non-null  int32  \n",
-      " 10  transmission  79016 non-null  int32  \n",
-      " 11  drive         79016 non-null  int32  \n",
-      " 12  size          79016 non-null  int32  \n",
-      " 13  type          79016 non-null  int32  \n",
-      " 14  paint_color   79016 non-null  int32  \n",
-      " 15  state         79016 non-null  int32  \n",
-      " 16  lat           79016 non-null  float64\n",
-      " 17  long          79016 non-null  float64\n",
-      " 18  posting_date  79016 non-null  int32  \n",
-      "dtypes: float64(4), int32(13), int64(2)\n",
-      "memory usage: 8.1 MB\n"
+      " 0   price         79016 non-null  int64  \n",
+      " 1   year          79016 non-null  float64\n",
+      " 2   manufacturer  79016 non-null  int64  \n",
+      " 3   model         79016 non-null  int64  \n",
+      " 4   condition     79016 non-null  int64  \n",
+      " 5   cylinders     79016 non-null  int64  \n",
+      " 6   fuel          79016 non-null  int64  \n",
+      " 7   odometer      79016 non-null  float64\n",
+      " 8   title_status  79016 non-null  int64  \n",
+      " 9   transmission  79016 non-null  int64  \n",
+      " 10  drive         79016 non-null  int64  \n",
+      " 11  size          79016 non-null  int64  \n",
+      " 12  type          79016 non-null  int64  \n",
+      " 13  paint_color   79016 non-null  int64  \n",
+      " 14  state         79016 non-null  int64  \n",
+      " 15  lat           79016 non-null  float64\n",
+      " 16  long          79016 non-null  float64\n",
+      " 17  posting_date  79016 non-null  int64  \n",
+      "dtypes: float64(4), int64(14)\n",
+      "memory usage: 11.5 MB\n"
      ]
     }
    ],
@@ -259,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -298,14 +439,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(39508, 18) (39508,) (39508, 18) (39508,)\n"
+      "(39508, 17) (39508,) (39508, 17) (39508,)\n"
      ]
     }
    ],
@@ -316,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -324,14 +465,14 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression Model Performance:\n",
-      "Accuracy: 0.2755644426445277\n",
-      "Accuracy-Score :27.56\n",
-      "Precision: 0.2755644426445277\n",
-      "Precision-Score :27.56\n",
-      "Recall: 1.0\n",
-      "Recall-Score :100.00\n",
-      "F1-Score: 0.4320666732810795\n",
-      "F1-Score :43.21\n"
+      "Accuracy: 0.30684924572238537\n",
+      "Accuracy-Score :30.68\n",
+      "Precision: 0.4409443392758171\n",
+      "Precision-Score :44.09\n",
+      "Recall: 0.3903216458997392\n",
+      "Recall-Score :39.03\n",
+      "F1-Score: 0.2794248113449524\n",
+      "F1-Score :27.94\n"
      ]
     }
    ],
@@ -343,7 +484,7 @@
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
     "# Creating an Instance of The LogisticRegression Class\n",
-    "log_reg = LogisticRegression()\n",
+    "log_reg = LogisticRegression(solver='lbfgs', max_iter=10000)\n",
     "\n",
     "# Fitting The Model on The Training Data\n",
     "log_reg.fit(X_train, y_train)\n",
@@ -371,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -379,14 +520,14 @@
      "output_type": "stream",
      "text": [
       "Decision Tree Classifier:\n",
-      "Accuracy: 0.588159360129594\n",
-      "Accuracy-Score :58.82\n",
-      "Precision: 0.6491820024245857\n",
-      "Precision-Score :64.92\n",
-      "Recall: 0.588159360129594\n",
-      "Recall-Score :58.82\n",
-      "F1-Score: 0.6051089264394816\n",
-      "F1-Score :60.51\n"
+      "Accuracy: 0.5819580844385948\n",
+      "Accuracy-Score :58.20\n",
+      "Precision: 0.6382258019035744\n",
+      "Precision-Score :63.82\n",
+      "Recall: 0.5819580844385948\n",
+      "Recall-Score :58.20\n",
+      "F1-Score: 0.5978502808116523\n",
+      "F1-Score :59.79\n"
      ]
     }
    ],
@@ -426,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -434,22 +575,14 @@
      "output_type": "stream",
      "text": [
       "Gaussian NB Class:\n",
-      "Accuracy: 0.2878910600384732\n",
-      "Accuracy-Score :28.79\n",
-      "Precision: 0.2482357797979103\n",
-      "Precision-Score :24.82\n",
-      "Recall: 0.36620625261598894\n",
-      "Recall-Score :36.62\n",
-      "F1-Score: 0.21706815016076209\n",
-      "F1-Score :21.71\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Accuracy: 0.2950541662448112\n",
+      "Accuracy-Score :29.51\n",
+      "Precision: 0.2566186862630888\n",
+      "Precision-Score :25.66\n",
+      "Recall: 0.3753179432692617\n",
+      "Recall-Score :37.53\n",
+      "F1-Score: 0.2222990358295393\n",
+      "F1-Score :22.23\n"
      ]
     }
    ],
