--- a/WDM.ipynb
+++ b/WDM.ipynb
@@ -261,7 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete The Duplicated Row in The DataSet.\n",
+    "df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +283,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +356,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -366,30 +376,30 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 79016 entries, 31 to 426836\n",
+      "Int64Index: 78837 entries, 31 to 426836\n",
       "Data columns (total 18 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   price         79016 non-null  int64  \n",
-      " 1   year          79016 non-null  float64\n",
-      " 2   manufacturer  79016 non-null  int64  \n",
-      " 3   model         79016 non-null  int64  \n",
-      " 4   condition     79016 non-null  int64  \n",
-      " 5   cylinders     79016 non-null  int64  \n",
-      " 6   fuel          79016 non-null  int64  \n",
-      " 7   odometer      79016 non-null  float64\n",
-      " 8   title_status  79016 non-null  int64  \n",
-      " 9   transmission  79016 non-null  int64  \n",
-      " 10  drive         79016 non-null  int64  \n",
-      " 11  size          79016 non-null  int64  \n",
-      " 12  type          79016 non-null  int64  \n",
-      " 13  paint_color   79016 non-null  int64  \n",
-      " 14  state         79016 non-null  int64  \n",
-      " 15  lat           79016 non-null  float64\n",
-      " 16  long          79016 non-null  float64\n",
-      " 17  posting_date  79016 non-null  int64  \n",
+      " 0   price         78837 non-null  int64  \n",
+      " 1   year          78837 non-null  float64\n",
+      " 2   manufacturer  78837 non-null  int64  \n",
+      " 3   model         78837 non-null  int64  \n",
+      " 4   condition     78837 non-null  int64  \n",
+      " 5   cylinders     78837 non-null  int64  \n",
+      " 6   fuel          78837 non-null  int64  \n",
+      " 7   odometer      78837 non-null  float64\n",
+      " 8   title_status  78837 non-null  int64  \n",
+      " 9   transmission  78837 non-null  int64  \n",
+      " 10  drive         78837 non-null  int64  \n",
+      " 11  size          78837 non-null  int64  \n",
+      " 12  type          78837 non-null  int64  \n",
+      " 13  paint_color   78837 non-null  int64  \n",
+      " 14  state         78837 non-null  int64  \n",
+      " 15  lat           78837 non-null  float64\n",
+      " 16  long          78837 non-null  float64\n",
+      " 17  posting_date  78837 non-null  int64  \n",
       "dtypes: float64(4), int64(14)\n",
-      "memory usage: 11.5 MB\n"
+      "memory usage: 11.4 MB\n"
      ]
     }
    ],
@@ -400,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,15 +421,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRAIN: [27649 28033 28223 ... 79013 79014 79015] TEST: [    0     1     2 ... 44998 45841 46455]\n",
-      "TRAIN: [    0     1     2 ... 44998 45841 46455] TEST: [27649 28033 28223 ... 79013 79014 79015]\n"
+      "TRAIN: [26986 27614 27995 ... 78834 78835 78836] TEST: [    0     1     2 ... 44896 45735 46349]\n",
+      "TRAIN: [    0     1     2 ... 44896 45735 46349] TEST: [26986 27614 27995 ... 78834 78835 78836]\n"
      ]
     }
    ],
@@ -439,14 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(39508, 17) (39508,) (39508, 17) (39508,)\n"
+      "(39419, 17) (39419,) (39418, 17) (39418,)\n"
      ]
     }
    ],
@@ -457,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -465,14 +475,14 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression Model Performance:\n",
-      "Accuracy: 0.30684924572238537\n",
-      "Accuracy-Score :30.68\n",
-      "Precision: 0.4409443392758171\n",
-      "Precision-Score :44.09\n",
-      "Recall: 0.3903216458997392\n",
-      "Recall-Score :39.03\n",
-      "F1-Score: 0.2794248113449524\n",
-      "F1-Score :27.94\n"
+      "Accuracy: 0.30734689735653764\n",
+      "Accuracy-Score :30.73\n",
+      "Precision: 0.4243332572378631\n",
+      "Precision-Score :42.43\n",
+      "Recall: 0.39094517409403334\n",
+      "Recall-Score :39.09\n",
+      "F1-Score: 0.27602348273663097\n",
+      "F1-Score :27.60\n"
      ]
     }
    ],
@@ -512,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -520,14 +530,14 @@
      "output_type": "stream",
      "text": [
       "Decision Tree Classifier:\n",
-      "Accuracy: 0.5819580844385948\n",
-      "Accuracy-Score :58.20\n",
-      "Precision: 0.6382258019035744\n",
-      "Precision-Score :63.82\n",
-      "Recall: 0.5819580844385948\n",
-      "Recall-Score :58.20\n",
-      "F1-Score: 0.5978502808116523\n",
-      "F1-Score :59.79\n"
+      "Accuracy: 0.5863564868841646\n",
+      "Accuracy-Score :58.64\n",
+      "Precision: 0.6402839277942317\n",
+      "Precision-Score :64.03\n",
+      "Recall: 0.5863564868841646\n",
+      "Recall-Score :58.64\n",
+      "F1-Score: 0.5990416931440571\n",
+      "F1-Score :59.90\n"
      ]
     }
    ],
@@ -567,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -575,14 +585,14 @@
      "output_type": "stream",
      "text": [
       "Gaussian NB Class:\n",
-      "Accuracy: 0.2950541662448112\n",
-      "Accuracy-Score :29.51\n",
-      "Precision: 0.2566186862630888\n",
-      "Precision-Score :25.66\n",
-      "Recall: 0.3753179432692617\n",
-      "Recall-Score :37.53\n",
-      "F1-Score: 0.2222990358295393\n",
-      "F1-Score :22.23\n"
+      "Accuracy: 0.2945862296412806\n",
+      "Accuracy-Score :29.46\n",
+      "Precision: 0.2564367373920003\n",
+      "Precision-Score :25.64\n",
+      "Recall: 0.37471360805447096\n",
+      "Recall-Score :37.47\n",
+      "F1-Score: 0.22145014455784193\n",
+      "F1-Score :22.15\n"
      ]
     }
    ],
